--- a/index.html
+++ b/index.html
@@ -403,5 +403,7 @@
 </p>
 </footer>
 
+<script data-ad-client="ca-pub-7812078877506411" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
 </body>
 </html>
