--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
     loadPermalink();
   });
 </script>
-
+<script data-ad-client="ca-pub-7812078877506411" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 
